<resources>
    <string name="app_name" translatable="false">P3M_TajMahal</string>
    <string name="restaurant">Restaurant</string>
    <string name="maps_not_installed">Google Maps is not installed.</string>
    <string name="phone_not_found">No app found for making calls.</string>
    <string name="no_browser_found">No browser found.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="on_site">Dine-in</string>
    <string name="take_away">Takeaway</string>
    <string name="tajmahal_typical_food_description">A typical Indian dish from Taj Mahal restaurant.</string>
    <string name="button_phone">Call the restaurant</string>
    <string name="button_website">Visit the restaurant\'s website</string>
    <string name="button_adress">View the restaurant\'s location on map</string>
    <string name="icon_gps">Icon GPS</string>
    <string name="icone_weekday">Icone weekday</string>
    <string name="icone_website">Icone website</string>
    <string name="phone_icon">Phone icon</string>
    <string name="leave_review">Leave a review</string>
    <string name="restaurant_type">Indian restaurant</string>
    <string name="restaurant_name">Taj Mahal</string>
    <string name="button_back">Back to restaurant details</string>
    <string name="ivReviewersAvatar">Review author\'s avatar picture</string>
    <string name="tietReviewersCommentHint">Share the details of your experience</string>
    <string name="button_validate">Submit</string>
    <string name="error_validate_add_comment_rate">Add rate (1–5) and comment</string>
    <string name="error_validate_add_comment">Add comment</string>
    <string name="error_validate_add_rate">Add rate (1–5)</string>
    <string name="error_existing_review">Review already exists</string>
    <string name="error_review_list_is_empty">Review list is not up to date (=empty)</string>
    <string name="new_reviewers_name">Manon Garcia</string>
</resources>
